# LearnCompLangs

Cpp/cmake-helloworld/: CMakeLists.txt  hello.cpp  msgpack.cpp
Cpp/makefile-simple-project/: Makefile  test.cpp
Dart/examples/: fibonacci.dart  helloworld.dart
Haskell/haskell-start/: LICENSE  README.md  package.yaml
Haskell/haskell-start/app/: Main.hs
Julia/: k.jl  matrix_dot_product.jl
Python/cython-fibonacci/: helloworld.pyx  pyproject.toml  test.ipynb
Python/observations/: Pipfile
Python/opencv-example/: pyproject.toml
Python/opencv-example/src/: crop.py  wa.py  watershed.py
Python/poetry-simple-project/: pyproject.toml  test.py
Python/poetry-test/: pyproject.toml
Python/pybind11-example/: Makefile  README.rst  build.sh  example.cpp  main.py  pyproject.toml
Python/pygame-example/: main.py  pyproject.toml
Python/venv-and-requirements-lock-project/: README.md
Python/venv-and-requirements-lock-project/requirements/: main.txt
Rust/print_kani_ascii/: Cargo.toml
TypeScript/deno-httpserver-helloworld/: README.md  main.ts
