[tool.poetry]
name = "pybind11-example"
version = "0.1.0"
description = ""
authors = ["MURAKI Taichi <muraki.taichi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
